# dx-ultra

./: CMakeLists.txt  NOTICE  README.md
main/: CMakeLists.txt  DXUltra.cpp  DXUltra.h  main.cpp
main/common/: CMakeLists.txt  stdafx.h
main/dxutil/: CMakeLists.txt  Constants.h  DefaultBufferUploader.cpp  DefaultBufferUploader.h  DepthStencilBuffer.cpp  DepthStencilBuffer.h  DescriptorHeap.cpp  DescriptorHeap.h  Fence.cpp  Fence.h  Frame.cpp  Frame.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  SwapChainDepthStencil.cpp  SwapChainDepthStencil.h  Timer.cpp  Timer.h  Vertex.cpp  Vertex.h  VertexPipeline.cpp  VertexPipeline.h
main/shaders/: basic_triangle.hlsl
main/windows/: CMakeLists.txt  Strings.cpp  Timer.cpp  Timer.h  Window.cpp  Window.h  WindowCallback.h
source/: CMakeLists.txt  main.cpp
